Update title for SNA Hospital

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CarePlus Hospital - Trusted Care, Advanced Treatment</title>
+    <title>SNA Hospital - Shree Narayan Ashram Multi-Specelist Hospital</title>
   </head>
   <body>
     <div id="root"></div>
